k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
        app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
      - name: gs-credentials
        secret:
          secretName: gs-credentials
      containers:
      - name: api
        image: asia.gcr.io/k8s-demo-342604/maple_server
        imagePullPolicy: Always
        command: ['gunicorn', 'Maple.wsgi:application', '-b', '0.0.0.0:8000']
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
          - mountPath: /gs
            name: gs-credentials
